Fixed: background clipping issue with some window sizes.

--- a/CTR@8pecxstudios.com/content/cctr/css/firstrun.css
+++ b/CTR@8pecxstudios.com/content/cctr/css/firstrun.css
@@ -13,12 +13,12 @@
 
   html, body {
     height: 100%;
+    background: rgb(238, 238, 238);
   }
 
   body {
     font: 14px/1 'Open Sans', sans-serif;
     color: #555;
-    background: #eee;
   }
 
   h1 {
